fix: menu responsive visiblity

--- a/src/components/breadcrumb/breadcrumb.css
+++ b/src/components/breadcrumb/breadcrumb.css
@@ -28,5 +28,5 @@
     padding: 0px;
     margin: 0px;
     width: auto !important;
-    height: auto;
+    height: auto !important;
 }
