--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -48,7 +48,7 @@
     top: 0px;
     bottom: 0px;
     left: 0px;
-    width: var(--menu-width);
+    width: var(--menu-width) !important;
     background: var(--dark) !important;
     position: fixed;
     overflow-y: scroll;
